Added global footer

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
   </head>
   <body>
     <div id="app"></div>
+    <div class="navbar fixed-bottom navbar-light bg-faded">
+      <div class="container">Copyright &copy; 2017. All rights reserved. Albion-Market.com</div>
+    </div>
     <script src="dist/build.js"></script>
   </body>
 </html>
