--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <div id="app"></div>
     <div class="navbar fixed-bottom navbar-light bg-faded">
-      <div class="container">Copyright &copy; 2017. All rights reserved. Albion-Market.com</div>
+      <div class="container text-center">Copyright &copy; 2017 Albion-Market.com. All rights reserved.</div>
     </div>
     <script src="dist/build.js"></script>
   </body>
